# dnd

./: .env.local.example  .gitignore  DND_2024_AUDIT.md  DND_2024_FULL_AUDIT_TH.md  MOBILE_OVERHAUL_PLAN.md  PROGRESS.md  PROJECT_STATUS.md  REFACTOR_PLAN.md  charlactor.html  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
.serena/: project.yml
agent-ctx/: engine-chapters-02-10-main.md
archive/: README.md
backend/: .env  .env.example  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_equipment.py
backend/scripts/: create_test_db.sql  seed_equipment.py  seed_races.py
backend/src/: __init__.py  main.py
backend/src/core/: config.py
backend/src/db/: __init__.py  redis.py  session.py
backend/src/models/: __init__.py  campaign.py  character.py  combat.py  condition.py  equipment.py  game_log.py  srd.py  user.py
backend/src/routers/: __init__.py  auth.py  campaigns.py  characters.py  dice.py  dm_control.py  equipment.py  srd.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_campaigns.py  test_dice.py
backend/tests/unit/: test_dice.py
docs/: README.md
e2e/: dnd-flows.spec.ts  dnd-solo.spec.ts  helpers.ts  mock-dm.ts  spell-buffs.spec.ts
frontend/: package-lock.json  package.json
public/: manifest.json  sw.js
scripts/: copy-standalone-assets.mjs  mobile_overhaul_plan.html  scan_project.ts  test_api_e2e.ts  test_combat.ts  test_combat_bridge.ts  test_dice.ts  test_dm_schema.ts  test_dnd_2024_compliance.ts  (+7 more)
(+248 files in other folders)
